[gd_scene load_steps=13 format=3 uid="uid://d2l1fpj8yehom"]

[ext_resource type="Script" path="res://Src/Entities/Player/Player.gd" id="1_fgl7g"]
[ext_resource type="Texture2D" uid="uid://dfot7sdqtwr0v" path="res://Assets/Player/player_single.png" id="2_hj3vl"]
[ext_resource type="PackedScene" uid="uid://438y4wpihhn1" path="res://Src/Entities/ThrowArrow/ThrowArrowPivot.tscn" id="2_pd4ny"]
[ext_resource type="Script" path="res://Src/Common/StateMachine/StateMachine.gd" id="3_ffp80"]
[ext_resource type="Script" path="res://Src/Entities/Player/States/Move.gd" id="5_ob3jm"]
[ext_resource type="Script" path="res://Src/Entities/Player/States/Idle.gd" id="6_kxhls"]
[ext_resource type="Script" path="res://Src/Entities/Player/States/Run.gd" id="7_xjuja"]
[ext_resource type="Script" path="res://Src/Entities/Player/States/Carry.gd" id="8_be3oy"]
[ext_resource type="Script" path="res://Src/Entities/Player/States/Air.gd" id="8_j1lab"]
[ext_resource type="Script" path="res://Src/Entities/Player/States/Pickup.gd" id="8_pln1i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7nepf"]
size = Vector2(12, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_akgtd"]
size = Vector2(18, 16)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_fgl7g")

[node name="ThrowArrowPivot" parent="." instance=ExtResource("2_pd4ny")]
visible = false
position = Vector2(9, -19)

[node name="PlayerSprite" type="Sprite2D" parent="."]
position = Vector2(0, -12)
texture = ExtResource("2_hj3vl")

[node name="PickupTransform2D" type="RemoteTransform2D" parent="."]
editor_description = "Set in code for currently picked ball creature."
position = Vector2(9, -19)
update_scale = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_7nepf")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_ffp80")
initial_state = NodePath("Move/Idle")

[node name="Move" type="Node" parent="StateMachine" node_paths=PackedStringArray("character")]
script = ExtResource("5_ob3jm")
character = NodePath("../..")
abstract = true

[node name="Idle" type="Node" parent="StateMachine/Move" node_paths=PackedStringArray("move_state", "states_for_transition")]
script = ExtResource("6_kxhls")
move_state = NodePath("..")
states_for_transition = [NodePath("../Run"), NodePath("../Air"), NodePath("../../Pickup")]

[node name="Run" type="Node" parent="StateMachine/Move" node_paths=PackedStringArray("move_state", "states_for_transition")]
script = ExtResource("7_xjuja")
move_state = NodePath("..")
states_for_transition = [NodePath("../Idle"), NodePath("../Air"), NodePath("../../Pickup")]

[node name="Air" type="Node" parent="StateMachine/Move" node_paths=PackedStringArray("move_state", "states_for_transition")]
script = ExtResource("8_j1lab")
move_state = NodePath("..")
states_for_transition = [NodePath("../Idle")]

[node name="JumpTimer" type="Timer" parent="StateMachine/Move/Air"]
process_callback = 0
wait_time = 0.2
one_shot = true

[node name="BufferTimer" type="Timer" parent="StateMachine/Move/Air"]
process_callback = 0
wait_time = 0.08
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="StateMachine/Move/Air"]
process_callback = 0
wait_time = 0.05
one_shot = true

[node name="Carry" type="Node" parent="StateMachine/Move" node_paths=PackedStringArray("move_state", "states_for_transition")]
script = ExtResource("8_be3oy")
move_state = NodePath("..")
states_for_transition = [NodePath("../Idle")]

[node name="ToAimTimer" type="Timer" parent="StateMachine/Move/Carry"]
wait_time = 0.2
one_shot = true

[node name="Pickup" type="Node" parent="StateMachine" node_paths=PackedStringArray("character", "states_for_transition")]
script = ExtResource("8_pln1i")
character = NodePath("../..")
states_for_transition = [NodePath("../Move/Carry")]

[node name="PickupArea" type="Area2D" parent="."]
position = Vector2(0, -10)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_akgtd")

[connection signal="timeout" from="StateMachine/Move/Air/JumpTimer" to="StateMachine/Move/Air" method="_on_jump_timer_timeout"]
[connection signal="timeout" from="StateMachine/Move/Air/BufferTimer" to="StateMachine/Move/Air" method="_on_buffer_timer_timeout"]
[connection signal="timeout" from="StateMachine/Move/Air/CoyoteTimer" to="StateMachine/Move/Air" method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="StateMachine/Move/Carry/ToAimTimer" to="StateMachine/Move/Carry" method="on_to_aim_timer_timeout"]
[connection signal="body_entered" from="PickupArea" to="." method="on_pickup_detector_body_entered"]
[connection signal="body_exited" from="PickupArea" to="." method="on_pickup_detector_body_exited"]
